Fixed Index Scroll with page, Index hide when clicked on mobile

--- a/css/format.css
+++ b/css/format.css
@@ -21,6 +21,7 @@
   overflow-x: hidden;
   overflow-y: hidden;
   border: 2px solid var(--color1);
+  padding-right: 15px;
 }
 #index-list{
   color: var(--color3);
@@ -67,6 +68,8 @@
 }
 
 #content{
+  max-width: 1000px;
+  margin: auto;
   overflow-wrap: break-word;
   overflow: auto;
 }
@@ -139,6 +142,7 @@ quote{
   display: block;
   width: fit-content;
   margin: auto;
+  margin-bottom: 5px;
   background-color: var(--color1);
   color: var(--color5);
   padding: 10px;
@@ -182,7 +186,7 @@ svg{
   z-index: 10;
 }
 
-/* .disable-element-scroll-y {
+.disable-element-scroll-y {
   height: 100%;
   overflow-y: hidden;
   background-color: brown;
@@ -191,4 +195,4 @@ svg{
 .disable-element-scroll-x {
   width: 100%;
   overflow-x: hidden;
-} */
+}
